--- a/index.html
+++ b/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
-</head>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+  </head>
+  <body>
 
-<body>
+    <nav class="navbar navbar-dark bg-dark justify-content-center">
+        <span class="navbar-brand"><strong>Weather Dashboard</strong></span>
+    </nav>
 
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-4">
+          <h3>Search History</h3>
 
+          <div class="input-group">
+            <input type="text" class="form-control" id="searchInp" />
+            <div class="input-group-append">
+              <button class="btn btn-primary" id="searchBtn">Search</button>
+            </div>
+          </div>
 
+          <ul class="list-group mt-3" id="searchHistory"></ul>
+          <br>          
+            <button class="btn btn-primary" id="clear_Btn">Clear History</button>          
+        </div>
 
-    
-    
-</body>
+        <div class="col-8">
+          <div class="jumbotron">
+            <h3>Current Weather</h3>
+          </div>
+
+          <div class="row" id="forecastEl">
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
