title and icon showing:

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         </div>
 
         <div class="col-8">
-          <div class="jumbotron">
-            <h3>Current Weather</h3>
+          <div class="container p-3 my-3 border" id="currentWeatherEl">
+
+
           </div>
 
-          <div class="row" id="forecastEl">
+          <div class="card-deck" id="forecastEl">
+            
           </div>
         </div>
-      </div>
-    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
