--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container mt-3">
       <div class="row">
         <div class="col-4">
-          <h4>Search History</h4>
+          <h4>Search for a City:</h4>
 
           <div class="input-group">
             <input type="text" class="form-control" id="searchInp" />
@@ -35,13 +35,15 @@
 
         <div class="col-8">
           <div class="container p-3 my-3 border" id="currentWeatherEl">
+            <h5>Current Weather In: </h5>
 
 
           </div>
 
-          <div class="card-deck" id="forecastEl">
-            
-          </div>
+          <div class="card-deck mt-3" >
+            <div class = "card" id="forecastEl">
+
+            </div>
         </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
