--- a/index.html
+++ b/index.html
@@ -7,46 +7,48 @@
     <!--Link to local style sheet-->
     <link rel="stylesheet" href="style.css" />
     <!--Link to Bootstrap CDN-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
   </head>
 
   <body>
     <!--Nav bar that displays at the top of the page-->
     <nav class="navbar navbar-dark bg-dark justify-content-center">
-        <span class="navbar-brand"><strong>Weather Dashboard</strong></span>
+      <span class="navbar-brand"><strong>Weather Dashboard</strong></span>
     </nav>
     <!--Container for the search bar, search history, clear history button, current weather, and forecast-->
     <div class="container mt-3">
       <div class="row">
-        <div class="col-4">
+        <aside class="col-lg-3">
           <h4>Search for a City:</h4>
           <!--Search Button-->
           <div class="input-group">
-            <input type="text" class="form-control" id="searchInp"/>
+            <input type="text" class="form-control" id="searchInp" />
             <div class="input-group-append">
               <button class="btn btn-primary" id="searchBtn">Search</button>
             </div>
           </div>
           <!--Displays search history-->
           <ul class="list-group mt-3" id="searchHistory"></ul>
-          <br>    
-            <!--Button to clear history-->      
-            <button class="btn btn-primary" id="clear_Btn">Clear History</button>          
-        </div>
+          <br />
+          <!--Button to clear history-->
+          <button class="btn btn-primary" id="clear_Btn">Clear History</button>
+        </aside>
         <!--Displays current weather from the city the user searches for-->
-        <div class="col-8">
-          <div class="container p-3 my-3 border" id="currentWeatherEl">
-            <h5>Current Weather In: </h5>
+        <div class="col-lg-9 card">
+          <div class="container-fluid p-4" id="currentWeatherEl">
+            <h5>Current Weather In:</h5>
           </div>
 
-          
           <!--Displays five day forecast-->
           <div class="card-deck mt-3" id="forecastEl">
-            <div class = "card" >
-            </div>
-            </div>
+            <!-- <div class = "card-columns h-100" >
+            </div> -->
+          </div>
         </div>
-      </div> 
+      </div>
     </div>
     <!--Link to jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
