removed css, was not needed

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Dashboard</title>
-    <!--Link to local style sheet-->
-    <link rel="stylesheet" href="style.css" />
     <!--Link to Bootstrap CDN-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
@@ -15,7 +13,7 @@
 
     <!--Nav bar that displays at the top of the page-->
     <nav class="navbar navbar-dark bg-dark justify-content-center">
-      <span class="navbar-brand"><strong>Weather Dashboard</strong></span>
+      <span class="navbar-brand"><h1>Weather Dashboard</h1></span>
     </nav>
 
     <!--Container for the search bar, search history, clear history button, current weather, and forecast-->
