--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--Link to jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--Link to internal javascript-->
-    <script src="script.js"></script>
+    <script src="assets/JS/script.js"></script>
 
   </body>
 </html>
